test/domains/diten/multitypeIndex.good
multitypeIndex.chpl:7: error: domain has mixed dimensional type
